--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Praveen Mistry",
   "license": "ISC",
   "dependencies": {
-    "event-stream": "{}",
+    "event-stream": {},
     "gulp": "^3.9.1",
     "gulp-coffee": "^3.0.2",
     "gulp-concat": "^2.6.1",
